test/liftedMeasure4.slq

def main() {
	if measure(H(0))||H(0) { } // error
}
